--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,135 +1,31 @@
-/* FOR COLOR */
-:root {
-    --kuning: #FFDA6A;
-    --pink: #EA868F;
-    --biru: #0dcaf0;
-    --merah: #d63384;
-}
-
-.warna-dasar {
-    background-color: #FFDA6A;
-}
-
-.warna-sibuk {
-    background-color: #EA868F;
-}
-
-.bg-male {
-    --bs-bg-opacity: 1;
-    background-color: #0dcaf0;
-}
-
-.bg-famale {
-    --bs-bg-opacity: 1;
-    background-color: #d63384;
-}
-
-.shadow-blue {
-    box-shadow: 0 4px 8px 0 rgb(0, 153, 255), 0 6px 20px 0 rgba(95, 191, 255, 0.863);
-}
-
+/* FOR COLOR */:root{--kuning:#FFDA6A;--pink:#EA868F;--biru:#0dcaf0;--merah:#d63384}
+.warna-dasar{background-color:#FFDA6A}
+.warna-sibuk{background-color:#EA868F}
+.bg-male{--bs-bg-opacity:1;background-color:#0dcaf0}
+.bg-famale{--bs-bg-opacity:1;background-color:#d63384}
+.shadow-blue{box-shadow:0 4px 8px 0 rgb(0,153,255),0 6px 20px 0 rgba(95,191,255,0.863)}
 /* FOR CONTACT */
-.gradient-brand-color {
-    background-image: -webkit-linear-gradient(0deg, #376be6 0%, #6470ef 100%);
-    background-image: -ms-linear-gradient(0deg, #376be6 0%, #6470ef 100%);
-    color: #fff;
-}
-
-.contact-info_wrapper {
-    overflow: hidden;
-    border-radius: 0 .625rem .625rem 0;
-    border: 1px solid #376be6;
-}
-
-.contact-info_list span.position-absolute {
-    left: 0;
-    margin-top: 5px;
-}
-
-.z-index-101 {
-    z-index: 101;
-}
-
-.list-style-none {
-    list-style: none;
-}
-
-.contact-form_wrapper {
-    border-radius: .625rem 0 0 .625rem;
-    border-top: 1px solid #376be6;
-    border-left: 1px solid #376be6;
-    border-bottom: 1px solid #376be6;
-}
-
-.kontak a {
-    text-decoration: none;
-}
-
-.kontak a:hover {
-    text-decoration: underline;
-}
-
+.gradient-brand-color{background-image:-webkit-linear-gradient(0deg,#376be6 0%,#6470ef 100%);background-image:-ms-linear-gradient(0deg,#376be6 0%,#6470ef 100%);color:#fff}
+.contact-info_wrapper{overflow:hidden;border-radius:0 .625rem .625rem 0;border:1px solid #376be6}
+.contact-info_list span.position-absolute{left:0;margin-top:5px}
+.z-index-101{z-index:101}
+.list-style-none{list-style:none}
+.contact-form_wrapper{border-radius:.625rem 0 0 .625rem;border-top:1px solid #376be6;border-left:1px solid #376be6;border-bottom:1px solid #376be6}
+.kontak a{text-decoration:none}
+.kontak a:hover{text-decoration:underline}
 /* FOR ADMIN */
-.coba img {
-    min-width: 100%;
-    width: 100%;
-    height: 5rem;
-}
-
-.coba>div {
-    overflow: hidden;
-}
-
-.td-vmiddle td, .td-vmiddle th {
-    vertical-align: middle;
-  }
-
+.coba img{min-width:100%;width:100%;height:5rem}
+.coba>div{overflow:hidden}
+.td-vmiddle td,.td-vmiddle th{vertical-align:middle}
+#admin-page .card-header span{display:block;width:100%;white-space:nowrap;overflow:auto}
+#admin-page .card-header span::-webkit-scrollbar{width:0;height:0}
 /* FOR NAVBAR */
-.navbar-nav a {
-    cursor: pointer;
-}
-
+.navbar-nav a{cursor:pointer}
 /* FOR DETAIL */
-.detail-content-loader {
-    min-height: 150px;
-    min-width: 150px;
-}
-
-.tunggu {
-    animation: loader 3s infinite ease-in-out;
-    -webkit-animation: loader 3s infinite ease-in-out;
-}
-
-@keyframes loader {
-    0% {
-        background-color: rgba(165, 165, 165, 0.1);
-    }
-    50% {
-        background-color: rgba(165, 165, 165, 0.3);
-    }
-    100% {
-        background-color: rgba(165, 165, 165, 0.1);
-    }
-}
-
-@-webkit-keyframes loader {
-    0% {
-        background-color: rgba(165, 165, 165, 0.1);
-    }
-    50% {
-        background-color: rgba(165, 165, 165, 0.3);
-    }
-    100% {
-        background-color: rgba(165, 165, 165, 0.1);
-    }
-}
-
+.detail-content-loader{min-height:150px;min-width:150px}
+.tunggu{animation:loader 3s infinite ease-in-out;-webkit-animation:loader 3s infinite ease-in-out}
+@keyframes loader{0%{background-color:rgba(165,165,165,0.1)}50%{background-color:rgba(165,165,165,0.3)}100%{background-color:rgba(165,165,165,0.1)}}
+@-webkit-keyframes loader{0%{background-color:rgba(165,165,165,0.1)}50%{background-color:rgba(165,165,165,0.3)}100%{background-color:rgba(165,165,165,0.1)}}
 /* FOR RIWAYAT */
-.modal-foto {
-    display: block;
-    width: 100%;
-}
-
-.thumb img {
-    cursor: zoom-in;
-}
+.modal-foto{display:block;width:100%}
+.thumb img{cursor:zoom-in}
