--- a/assets/css/riwayat.css
+++ b/assets/css/riwayat.css
@@ -1,7 +1,7 @@
 body{background-color:#f8f9fa!important}
 .p-4{padding:1.5rem!important}
 .mb-0,.my-0{margin-bottom:0!important}
-.shadow-sm{box-shadow:0 .125rem .25rem rgba(0,0,0,.075)!important}}
+.shadow-sm{box-shadow:0 .125rem .25rem rgba(0,0,0,.075)!important}
 /* user-dashboard-info-box */
 .user-dashboard-info-box .candidates-list .thumb{margin-right:20px}
 .user-dashboard-info-box .candidates-list .thumb img{width:80px;height:80px;-o-object-fit:cover;object-fit:cover;overflow:hidden;border-radius:50%}
