Perbaikan detail, proses, dan riwayat

--- a/assets/css/riwayat.css
+++ b/assets/css/riwayat.css
@@ -4,7 +4,7 @@ body{background-color:#f8f9fa!important}
 .shadow-sm{box-shadow:0 .125rem .25rem rgba(0,0,0,.075)!important}
 /* user-dashboard-info-box */
 .user-dashboard-info-box .candidates-list .thumb{margin-right:20px}
-.user-dashboard-info-box .candidates-list .thumb img{width:80px;height:80px;-o-object-fit:cover;object-fit:cover;overflow:hidden;border-radius:50%}
+.user-dashboard-info-box .candidates-list .thumb img{max-width:80px;max-height:80px;-o-object-fit:cover;object-fit:cover;overflow:hidden;border-radius:50%}
 .user-dashboard-info-box .title{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:30px 0}
 .user-dashboard-info-box .candidates-list td{vertical-align:middle}
 .user-dashboard-info-box td li{margin:0 4px}
