--- a/docs/styles/login.css
+++ b/docs/styles/login.css
@@ -9,7 +9,7 @@ body {
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #fff3cd;
-    background-image: url(/img/bg.jpg);
+    background-image: url(/images/bg.jpg);
     background-size: cover
 }
 
