APK fix loading login hilang kalau user/pass salah

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -9,6 +9,10 @@ html {
     --merah: #d63384
 }
 
+.collapsing {
+    transition: height 0.15s linier !important;
+}
+
 .warna-dasar {
     background-color: #FFDA6A
 }
