--- a/docs/css/login.css
+++ b/docs/css/login.css
@@ -1,4 +1,4 @@
-body{display:flex;align-items:center;padding-top:40px;padding-bottom:40px;background-color:#fff3cd;background-image:url(/img/bg.jpg);background-size:cover}
+body{display:flex;align-items:center;padding-top:40px;padding-bottom:40px;background-color:#fff3cd;background-image:url(/img/bg.jpg);background-size:contain}
 .wrapper{width:100%;margin:0 auto;overflow:hidden;border-radius:1rem;background:#3a2875;background:url(/img/lg-bg-5.png);background-size:contain}
 .wp-u{margin:2rem auto}
 .wp-u span,.wp-u img{display:block;margin:0 auto}
