--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,7 +1,15 @@
-html,body{height:100%}
 body{display:flex;align-items:center;padding-top:40px;padding-bottom:40px;background-color:#fff3cd;background-image:url(/img/bg.jpg);background-size:cover}
-.form-signin{width:100%;max-width:400px;padding:15px;margin:auto;background-color:#f5f5f5}
-.form-signin .checkbox{font-weight:400}
-.form-signin .form-floating:focus-within{z-index:2}
-.form-signin input[type="text"]{margin-bottom:-1px;border-bottom-right-radius:0;border-bottom-left-radius:0}
-.form-signin input[type="password"]{margin-bottom:10px;border-top-left-radius:0;border-top-right-radius:0}
+.wrapper{width:100%;margin:0 auto;overflow:hidden;border-radius:1rem;background:#3a2875;background:url(/img/lg-bg-5.png);background-size:contain}
+.wp-u{margin:2rem auto}
+.wp-u span,.wp-u img{display:block;margin:0 auto}
+.wp-u span{font-weight:bold;font-size:1.5rem;color: #0283ad;}
+.wp-u img{width:6rem;height:auto}
+.wp-b{background:#fff;padding:2rem;border-radius:1rem}
+.wp-b span{display:block;text-align:left}
+.wp-b .judul{font-weight:bold;font-size:1.25rem;color: #0283ad;}
+.wp-b .subjudul{font-size:.9rem;color:#555}
+.wp-b form{margin-top:2rem}
+.form-floating{margin:.5rem auto}
+.wp-b .form-control{border:none;border-bottom:1px solid #cbcbcb;border-radius:0}
+.wp-b button{background-color: #01bede;border-color: #0186b5;font-size:1rem;width:50%;}
+.wp-b button:hover{background-color: #0283ad;border-color: #006a8d;}
