Mengatur tampilan halaman absen dan spesifikkan datatables

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,6 @@
 /* FOR COLOR */
 :root{--kuning:#FFDA6A;--pink:#EA868F;--biru:#0dcaf0;--merah:#d63384}
-.warna-dasar{background-color:#00dbff}
+.warna-dasar{background-color:#efda86}
 .warna-sibuk{background-color:#EA868F}
 .bg-male{--bs-bg-opacity:1;background-color:#0dcaf0}
 .bg-famale{--bs-bg-opacity:1;background-color:#d63384}
